<resources>
    <string name="app_name">NanoPost</string>
    <string name="header">Name</string>
    <string name="subheader">Dec 12, 2012 12:12:12</string>
    <string name="supportText">Default supporting text</string>
    <string name="favoriteCount">0</string>
    <string name="subhead_secondary">Default bio.</string>
    <string name="images">0</string>
    <string name="subscribers">0</string>
    <string name="posts">0</string>
    <string name="likes">0</string>
    <string name="liked">1</string>
    <string name="description1">images</string>
    <string name="description2">subscribers</string>
    <string name="description3">posts</string>
    <string name="subscribe">Subscribe</string>
    <string name="imagesDescription">Images</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="logout">Logout</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Wtf! The fragment is blank?</string>
    <string name="title_feed">Feed</string>
    <string name="default_menu_item_1">menu_item_1</string>
    <string name="add_image">Add image...</string>
    <string name="confirm">Confirm</string>
</resources>