<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileAvatarImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:accessibilityLiveRegion="none"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
        app:srcCompat="?attr/colorPrimary" />

    <TextView
        android:id="@+id/profileNickName"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/header"
        app:layout_constraintStart_toEndOf="@id/profileAvatarImage"
        app:layout_constraintTop_toTopOf="@id/profileAvatarImage" />

    <TextView
        android:id="@+id/additionalText"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/subheader"
        app:layout_constraintStart_toEndOf="@id/profileAvatarImage"
        app:layout_constraintTop_toBottomOf="@id/profileNickName" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileAvatarImage" />

    <TextView
        android:id="@+id/postSupportingText"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/supportText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/postImage"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postSupportingText"
        app:srcCompat="@drawable/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:outlineProvider="background"
        android:text="@string/favoriteCount"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/purple_200"
        app:icon="@drawable/baseline_favorite_border_24"
        app:iconPadding="9.5dp"
        app:iconSize="18dp"
        app:iconTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        app:strokeColor="@color/purple_200"
        android:visibility="visible"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>