<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_day"
    tools:context=".presentation.post.PostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileAvatarImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:accessibilityLiveRegion="none"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:srcCompat="?attr/colorPrimary" />

        <TextView
            android:id="@+id/profileNickName"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/header"
            app:layout_constraintStart_toEndOf="@id/profileAvatarImage"
            app:layout_constraintTop_toTopOf="@id/profileAvatarImage" />

        <TextView
            android:id="@+id/additionalText"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/subheader"
            app:layout_constraintStart_toEndOf="@id/profileAvatarImage"
            app:layout_constraintTop_toBottomOf="@id/profileNickName" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileAvatarImage" />

        <TextView
            android:id="@+id/postSupportingText"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="left"
            android:text="@string/supportText"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialDivider1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postImageRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postSupportingText" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_default"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="Post"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:outlineProvider="background"
            android:text="@string/favoriteCount"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/purple_200"
            android:visibility="visible"
            app:icon="@drawable/baseline_favorite_border_24"
            app:iconPadding="9.5dp"
            app:iconSize="18dp"
            app:iconTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postImageRecycler"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>